# nekosource

./: .gitignore  Cargo.toml  LICENSE  README.md
locales/: be.ftl  en.ftl  ru.ftl  uk.ftl
src/: main.rs
src/app/: error.rs  gpg.rs  language.rs  mod.rs  state.rs
src/app/git/: clone.rs  commit.rs  config.rs  credentials.rs  log.rs  mod.rs  push.rs
src/app/ui/: commit_panel.rs  mod.rs  repo_list.rs  toolbar.rs  workers.rs
src/app/ui/dialogs/: about.rs  mod.rs  passphrase.rs  settings.rs  status.rs
